chore: lint, prettier

--- a/apps/svelte-blog/src/app.html
+++ b/apps/svelte-blog/src/app.html
@@ -5,8 +5,18 @@
     <link rel="icon" href="%sveltekit.assets%/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- AI-friendly content discovery -->
-    <link rel="alternate" type="text/markdown" href="/llms.txt" title="LLM-friendly content guide" />
-    <link rel="alternate" type="text/markdown" href="/llms-full.txt" title="Complete content archive" />
+    <link
+      rel="alternate"
+      type="text/markdown"
+      href="/llms.txt"
+      title="LLM-friendly content guide"
+    />
+    <link
+      rel="alternate"
+      type="text/markdown"
+      href="/llms-full.txt"
+      title="Complete content archive"
+    />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
