--- a/apps/svelte-blog/src/app.html
+++ b/apps/svelte-blog/src/app.html
@@ -17,6 +17,8 @@
       href="/llms-full.txt"
       title="Complete content archive"
     />
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f0d31da4d3c348078218b627067efa9b"}'></script>
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
